# sonic-wpa-supplicant

./: LICENSE  Makefile.am  README.md  azure-pipelines.yml  configure.ac  lgtm.yml  package.cfg
.github/: copilot-instructions.md
.github/workflows/: codeql-analysis.yml
debian/: changelog  control  debhelper-build-stamp  eapoltest.lintian-overrides  eapoltest.substvars  files  hostapd.postrm.debhelper  hostapd.substvars  libsonic-nas-qos-dev.install  rules  sonic-nas-qos.install  wpagui.substvars  wpasupplicant-udeb.substvars  wpasupplicant.postrm.debhelper  wpasupplicant.substvars
debian/patches/: 001_enable_config_fips.patch  series
hostapd/: Makefile  config_file.c  config_file.h  ctrl_iface.c  main.c
radius_lib/: Makefile
scripts/init/: sonic-qos-init.service
sonic/: nas_qos_buffer_pool.h  nas_qos_buffer_profile.h  nas_qos_common.h  nas_qos_consts.h  nas_qos_cps.h  nas_qos_cps_buffer_pool.h  nas_qos_cps_buffer_profile.h  nas_qos_cps_map.h  nas_qos_cps_policer.h  nas_qos_cps_port_egress.h  nas_qos_cps_port_ingress.h  nas_qos_cps_priority_group.h  nas_qos_cps_queue.h  nas_qos_cps_scheduler.h  nas_qos_cps_scheduler_group.h  nas_qos_cps_wred.h  nas_qos_init.h  nas_qos_map.h  nas_qos_map_entry.h  nas_qos_map_util.h  nas_qos_policer.h  nas_qos_port_egress.h  nas_qos_port_ingress.h  nas_qos_priority_group.h  nas_qos_queue.h  nas_qos_scheduler.h  nas_qos_scheduler_group.h  nas_qos_switch.h  nas_qos_switch_list.h  nas_qos_wred.h
sos/plugins/: dn_nas_qos.py
src/: build.rules  nas_qos_buffer_pool.cpp  nas_qos_buffer_profile.cpp  nas_qos_cps.cpp  nas_qos_cps_buffer_pool.cpp  nas_qos_cps_buffer_profile.cpp  nas_qos_cps_map.cpp  nas_qos_cps_map_entry.cpp  nas_qos_cps_policer.cpp  nas_qos_cps_port_egress.cpp  nas_qos_cps_port_ingress.cpp  nas_qos_cps_priority_group.cpp  nas_qos_cps_queue.cpp  nas_qos_cps_scheduler.cpp  nas_qos_cps_scheduler_group.cpp  nas_qos_cps_wred.cpp  nas_qos_init.cpp  nas_qos_map.cpp  nas_qos_map_entry.cpp  nas_qos_map_util.cpp  nas_qos_policer.cpp  nas_qos_port_egress.cpp  nas_qos_port_ingress.cpp  nas_qos_priority_group.cpp  nas_qos_queue.cpp  nas_qos_scheduler.cpp  nas_qos_scheduler_group.cpp  nas_qos_switch.cpp  nas_qos_switch_list.cpp  nas_qos_wred.cpp
src/ap/: ap_drv_ops.h  hostapd.c  hostapd.h  ieee802_1x.c  sta_info.h  wpa_auth_kay.c
src/common/: ieee802_1x_defs.h
src/crypto/: Makefile  aes-omac1.c  crypto.h  crypto_gnutls.c  crypto_internal.c  crypto_libtomcrypt.c  crypto_linux.c  crypto_nettle.c  crypto_openssl.c  crypto_wolfssl.c  tls_openssl.c
src/drivers/: driver.h  driver_macsec_linux.c  driver_macsec_sonic.c  driver_wired.c  driver_wired_common.c  driver_wired_sonic.c  drivers.c  drivers.mak  drivers.mk  sonic_operators.cpp  sonic_operators.h
src/eap_server/: eap.h  eap_server.c
src/eapol_auth/: eapol_auth_sm.c  eapol_auth_sm.h  eapol_auth_sm_i.h
src/pae/: ieee802_1x_cp.c  (+5 more)
wpa_supplicant/: Makefile  README  config.c  config_file.c  config_ssid.h  ctrl_iface.c  defconfig  driver_i.h  main.c  wpa_cli.c  wpa_supplicant-udeb  wpas_kay.c
(+120 files in other folders)
